Added research portal webpage and credit comments

--- a/Final Project/COE_research.html
+++ b/Final Project/COE_research.html
@@ -110,116 +110,98 @@
 
     <!--Main Body-->
     <main>
-        <section class="homepage">
-            <!--Pitch Tag-->
-            <section class="pitchtag">
-                <img id="pitchtag_web" src="images/Banner.png" alt="Banner">
+        <section class="researchpage">
+            <!-- Pitch Tag -->
+            <section class="header_img">
+                <img id="pitchtag_web" src="images/coe_blg@2x.png" alt="Banner">
             </section>
-
             <!-- Vision Mission Quality Policy -->
-            <section class="vision">
-                <div class="socotec">
-                    <img id="socotec" src="images/socotec.png" alt="SOCOTECH seal">
-                </div>
-                <div class="vismiss">
-                        <h1>Vision</h1>
-                        <p>
-                            PRMSU as a premier learner center and proactive university in a digital and global society.
-                        </p>
-                        <h1>Mission</h1>
-                        <p>
-                            The President Ramon Magsaysay State University shall primarily provide advance and 
-                            higher professional, technical, special instructions in various disciplines; 
-                            undertake research, extension, and income generation programs for sustainable 
-                            development of Zambales, the region, and the country. 
-                        </p>
-                    </div>
-                <div class="quality">
-                    <h1>Quality</h1>
-                        <p>
-                            The President Ramon Magsaysay State University is committed to continually strive 
-                            for excellence in instruction, research, extension and production to strengthen 
-                            global competitiveness adhering to quality standards for the utmost satisfaction of 
-                            its valued customers.
-                        </p>
-                </div>
-            </section>
-
-        <!-- Carousel Images -->
-            <section class="carousel">
-                <div class="slider">
-                    <div class="list">
-                        <div class="item">
-                            <img src="images/slide1.png" alt="Slide 1">
-                        </div>
-                        <div class="item">
-                            <img src="images/slide2.png" alt="Slide 2">
-                        </div>
-                        <div class="item">
-                            <img src="images/slide3.png" alt="Slide 3">
-                        </div>
-                        <div class="item">
-                            <img src="images/slide4.png" alt="Slide 4">
-                        </div>
-                        <div class="item">
-                            <img src="images/slide5.png" alt="Slide 5">
-                        </div>
-                        <div class="item">
-                            <img src="images/slide6.png" alt="Slide 6">
-                        </div>
-                        <div class="item">
-                            <img src="images/slide7.png" alt="Slide 7">
-                        </div>
-                        <div class="item">
-                            <img src="images/slide8.png" alt="Slide 8">
-                        </div>
-                    </div>
-                    <div class="buttons">
-                        <button id="prev"><</button>
-                        <button id="next">></button>
-                    </div>
-                    <ul class="dots">
-                        <li class="active"></li>
-                        <li></li>
-                        <li></li>
-                        <li></li>
-                        <li></li>
-                        <li></li>
-                        <li></li>
-                        <li></li>
-                        <li></li>
-                    </ul>
-                </div>
-            </section>
-
-        <!-- Faculty and Featured Faculty -->
-            <section class="faculty">
-                <div class="faculty_link">
-                    <h1>Faculty</h1>
-                    <p>
-                        The CoE faculty features a diverse team of accomplished experts, bringing deep experience across engineering and scientific fields.
-                    </p>
+            <section class="res_link">
+                <h1>Research and Development</h1>
+                <ul>
                     <li>
-                        <a href="COE_faculty.html">
-                        Faculty & Teaching Staff
-                        <img src="images/Ext Link Icon.svg" alt="External Link Icon" class="svg-icon">
+                        <a href="COE_res_CE.html" class="linkcard">
+                            <img class="res_img" src="images/CE_Link.png" alt="Civil Engineer">
+                            <span>Civil Engineering</span>
                         </a>
                     </li>
-
-                </div>
-                <div class="featured_faculty">
-                    <div class="featured_pic">
-                        <img id="featured_pic" src="images/Featured Image.png" alt="Featured Faculty">
-                    </div>
-                    <div class="featured_info">
-                        <h3>Engr. Dennize Jianna R. Basilio</h3>
-                        <h2>Head of Software Engineering Elective</h2>
-                        <p>
-                            "A brilliant and dedicated leader. Her ability to simplify complex concepts and inspire innovation makes her highly respected by students and colleagues alike."
-                        </p>
-                    </div>
-                </div>
+                    <li>
+                        <a href="COE_res_CpE.html" class="linkcard">
+                            <img class="res_img" src="images/CpE_Link.png" alt="Computer Engineer">
+                            <span>Computer Engineering</span>
+                        </a>
+                    </li>
+                    <li>
+                        <a href="COE_res_ME.html" class="linkcard">
+                            <img class="res_img" src="images/ME_Link.png" alt="Mechanical Engineer">
+                            <span>Mechanical Engineering</span>
+                        </a>
+                    </li>
+                    <li>
+                        <a href="COE_res_EE.html" class="linkcard">
+                            <img class="res_img" src="images/EE_Link.png" alt="Electrical Engineer">
+                            <span>Electrical Engineering</span>
+                        </a>
+                    </li>
+                    <li>
+                        <a href="COE_res_EM.html" class="linkcard">
+                            <img class="res_img" src="images/EM_Link.png" alt="Mining Engineer">
+                            <span>Mining Engineering</span>
+                        </a>
+                    </li>
+                </ul>
             </section>
+        </section>
+
+        <!-- Faculty and Featured Faculty -->
+        <section class="research_main">
+            <div class="research_left_link">
+                <h1>Publications</h1>
+                <ul>
+                    <li>
+                        <a href="https://drive.google.com/file/d/13nluKfdf3H1oi804CMlMBxHw0Xa7869U/view">
+                            Research Journal 2020
+                            <img src="images/Ext Link Icon.svg" alt="External Link Icon" class="svg-icon">
+                        </a>
+                    </li>
+                    <li>
+                        <a href="https://drive.google.com/file/d/1D0A_tihMA52JyBupAmUC9wPHaWG01ue-/view">
+                            Research Journal 2020
+                            <img src="images/Ext Link Icon.svg" alt="External Link Icon" class="svg-icon">
+                        </a>
+                    </li>
+                </ul>
+            </div>
+            <div class="research_left_link">
+                <h1>Documents</h1>
+                <ul>
+                    <li>
+                        <a href="https://drive.google.com/file/d/1JRwwACpxtTxdf_2pDQyGw2Tqvsy2JGxE/view?usp=share_link">
+                            PRMSU IP Rights Manual
+                            <img src="images/Ext Link Icon.svg" alt="External Link Icon" class="svg-icon">
+                        </a>
+                    </li>
+                    <li>
+                        <a href="https://drive.google.com/file/d/12zq2nwBMpu8rilk5SE04L45-8bUkynxA/view?usp=share_link">
+                            RMTU Research Manual
+                            <img src="images/Ext Link Icon.svg" alt="External Link Icon" class="svg-icon">
+                        </a>
+                    </li>
+                    <li>
+                        <a href="https://drive.google.com/file/d/1qu8FZ21f_pSlViZx4RZJdNiqcrjJkkmF/view?usp=share_link">
+                            Research Manual 2022
+                            <img src="images/Ext Link Icon.svg" alt="External Link Icon" class="svg-icon">
+                        </a>
+                    </li>
+                    <li>
+                        <a href="https://drive.google.com/file/d/1HmzFeKSTHulJecaMgdT0iUbv6pBFpWLT/view?usp=share_link">
+                            Harmonized R and D
+                            <img src="images/Ext Link Icon.svg" alt="External Link Icon" class="svg-icon">
+                        </a>
+                    </li>
+                </ul>
+            </div>
+        </section>
         <!-- News and Information -->
             <section class="news">
                 <div class="news_header">
@@ -228,41 +210,18 @@
                 <div class="news_body">
                     <div class="card">
                         <div class="card_1_image">
-                            <img id="card_1_image" src="images/machine_demo.png" alt="News 1 Image">
-                        </div>
-                        <div class="card_1_title">
-                            <h2>
-                                BSME Department awards and demonstrates 
-                                the Fish Crushing Machine to Laoag Kaunlaran
-                                Association
-                            </h2>
-                        </div>
-                        <div class="card_1_body">
-                            <p>
-                                "The BSME Department awards and demonstrates the Fish Crushing Machine to Laoag Kaunlaran Association 
-                                -Cooperative through the Regional Innovation Inclusive Cooperation Program between DTI, DOST, PRMSU and 
-                                MSMED Council on the 14th of October 2022. This is a realization of the objectives of TEAM-UP EXTENSION PROGRAM 
-                                parallel with the THRIVE agenda of the college with the goal, "A single step from COE, a hundred mouths fed in the 
-                                community through upscaling and upgrading livelihood activities of small and medium enterprises in the Province of Zambales". 
-                            </p>
+                            <img id="card_1_image" src="images/E-Trap.png" alt="News 1 Image">
                         </div>
                     </div>
 
                     <div class="card">
                         <div class="card_2_image">
-                            <img id="card_2_image" src="images/exam.png" alt="News 1 Image">
+                            <img id="card_2_image" src="images/OpenCV.png" alt="News 1 Image">
                         </div>
-                        <div class="card_2_title">
-                            <h2>
-                                COE conducts Orientation and Gender Sensitivity Training
-                            </h2>
-                        </div>
-                        <div class="card_2_body">
-                            <p>
-                                "The PRMSU College of Engineering conducted the 2nd Batch of Orientation and Gender and Development (GAD) / Gender Sensitivity Training 
-                                (GST) Seminar for Freshmen at the Science and Engineering Laboratory Building (SELB) Annex on October 20, 2022 with speakers Engr. Rue Lei 
-                                Balicaco and Engr. Cindy Dullas."
-                            </p>
+                    </div>
+                    <div class="card">
+                        <div class="card_3_image">
+                            <img id="card_3_image" src="images/Water Level.png" alt="News 1 Image">
                         </div>
                     </div>
                 </div>
@@ -338,7 +297,6 @@
         </div>
     </footer>
     <!-- Script -->
-    <script src="COE_homepage.js"></script>
 </body>
 </html>
 
