Added Instruction and Extension Webpage

--- a/Final Project/COE_instruction.html
+++ b/Final Project/COE_instruction.html
@@ -110,166 +110,28 @@
 
     <!--Main Body-->
     <main>
-        <section class="homepage">
-            <!--Pitch Tag-->
-            <section class="pitchtag">
-                <img id="pitchtag_web" src="images/Banner.png" alt="Banner">
-            </section>
-
-            <!-- Vision Mission Quality Policy -->
-            <section class="vision">
-                <div class="socotec">
-                    <img id="socotec" src="images/socotec.png" alt="SOCOTECH seal">
-                </div>
-                <div class="vismiss">
-                        <h1>Vision</h1>
-                        <p>
-                            PRMSU as a premier learner center and proactive university in a digital and global society.
-                        </p>
-                        <h1>Mission</h1>
-                        <p>
-                            The President Ramon Magsaysay State University shall primarily provide advance and 
-                            higher professional, technical, special instructions in various disciplines; 
-                            undertake research, extension, and income generation programs for sustainable 
-                            development of Zambales, the region, and the country. 
-                        </p>
-                    </div>
-                <div class="quality">
-                    <h1>Quality</h1>
-                        <p>
-                            The President Ramon Magsaysay State University is committed to continually strive 
-                            for excellence in instruction, research, extension and production to strengthen 
-                            global competitiveness adhering to quality standards for the utmost satisfaction of 
-                            its valued customers.
-                        </p>
-                </div>
-            </section>
-
-        <!-- Carousel Images -->
-            <section class="carousel">
-                <div class="slider">
-                    <div class="list">
-                        <div class="item">
-                            <img src="images/slide1.png" alt="Slide 1">
-                        </div>
-                        <div class="item">
-                            <img src="images/slide2.png" alt="Slide 2">
-                        </div>
-                        <div class="item">
-                            <img src="images/slide3.png" alt="Slide 3">
-                        </div>
-                        <div class="item">
-                            <img src="images/slide4.png" alt="Slide 4">
-                        </div>
-                        <div class="item">
-                            <img src="images/slide5.png" alt="Slide 5">
-                        </div>
-                        <div class="item">
-                            <img src="images/slide6.png" alt="Slide 6">
-                        </div>
-                        <div class="item">
-                            <img src="images/slide7.png" alt="Slide 7">
-                        </div>
-                        <div class="item">
-                            <img src="images/slide8.png" alt="Slide 8">
-                        </div>
-                    </div>
-                    <div class="buttons">
-                        <button id="prev"><</button>
-                        <button id="next">></button>
-                    </div>
-                    <ul class="dots">
-                        <li class="active"></li>
-                        <li></li>
-                        <li></li>
-                        <li></li>
-                        <li></li>
-                        <li></li>
-                        <li></li>
-                        <li></li>
-                        <li></li>
-                    </ul>
-                </div>
-            </section>
-
-        <!-- Faculty and Featured Faculty -->
-            <section class="faculty">
-                <div class="faculty_link">
-                    <h1>Faculty</h1>
-                    <p>
-                        The CoE faculty features a diverse team of accomplished experts, bringing deep experience across engineering and scientific fields.
-                    </p>
+        <section class="researchpage">
+            <!-- Instruction -->
+             <section class="res_link">
+                <h1>Instruction</h1>
+             </section>
+            <section class="res_link">
+                <ul>
                     <li>
-                        <a href="COE_faculty.html">
-                        Faculty & Teaching Staff
-                        <img src="images/Ext Link Icon.svg" alt="External Link Icon" class="svg-icon">
+                        <a href="COE_curricular.html" class="linkcard">
+                            <img class="res_img" src="images/Diploma.png" alt="Civil Engineer">
+                            <span>Curricular Offerings</span>
                         </a>
                     </li>
-
-                </div>
-                <div class="featured_faculty">
-                    <div class="featured_pic">
-                        <img id="featured_pic" src="images/Featured Image.png" alt="Featured Faculty">
-                    </div>
-                    <div class="featured_info">
-                        <h3>Engr. Dennize Jianna R. Basilio</h3>
-                        <h2>Head of Software Engineering Elective</h2>
-                        <p>
-                            "A brilliant and dedicated leader. Her ability to simplify complex concepts and inspire innovation makes her highly respected by students and colleagues alike."
-                        </p>
-                    </div>
-                </div>
+                    <li>
+                        <a href="COE_faculty.html" class="linkcard">
+                            <img class="res_img" src="images/Faculty.png" alt="Computer Engineer">
+                            <span>Faculty</span>
+                        </a>
+                    </li>
+                </ul>
             </section>
-        <!-- News and Information -->
-            <section class="news">
-                <div class="news_header">
-                    <h1>News & Information</h1>
-                </div>
-                <div class="news_body">
-                    <div class="card">
-                        <div class="card_1_image">
-                            <img id="card_1_image" src="images/machine_demo.png" alt="News 1 Image">
-                        </div>
-                        <div class="card_1_title">
-                            <h2>
-                                BSME Department awards and demonstrates 
-                                the Fish Crushing Machine to Laoag Kaunlaran
-                                Association
-                            </h2>
-                        </div>
-                        <div class="card_1_body">
-                            <p>
-                                "The BSME Department awards and demonstrates the Fish Crushing Machine to Laoag Kaunlaran Association 
-                                -Cooperative through the Regional Innovation Inclusive Cooperation Program between DTI, DOST, PRMSU and 
-                                MSMED Council on the 14th of October 2022. This is a realization of the objectives of TEAM-UP EXTENSION PROGRAM 
-                                parallel with the THRIVE agenda of the college with the goal, "A single step from COE, a hundred mouths fed in the 
-                                community through upscaling and upgrading livelihood activities of small and medium enterprises in the Province of Zambales". 
-                            </p>
-                        </div>
-                    </div>
-
-                    <div class="card">
-                        <div class="card_2_image">
-                            <img id="card_2_image" src="images/exam.png" alt="News 1 Image">
-                        </div>
-                        <div class="card_2_title">
-                            <h2>
-                                COE conducts Orientation and Gender Sensitivity Training
-                            </h2>
-                        </div>
-                        <div class="card_2_body">
-                            <p>
-                                "The PRMSU College of Engineering conducted the 2nd Batch of Orientation and Gender and Development (GAD) / Gender Sensitivity Training 
-                                (GST) Seminar for Freshmen at the Science and Engineering Laboratory Building (SELB) Annex on October 20, 2022 with speakers Engr. Rue Lei 
-                                Balicaco and Engr. Cindy Dullas."
-                            </p>
-                        </div>
-                    </div>
-                </div>
-
-            </section>
-        </section>
-    </main>
+        </section>  
     
     <!-- Footer -->
     <footer>
@@ -338,7 +200,6 @@
         </div>
     </footer>
     <!-- Script -->
-    <script src="COE_homepage.js"></script>
 </body>
 </html>
 
