--- a/Final Project/COE_research.html
+++ b/Final Project/COE_research.html
@@ -30,7 +30,7 @@
             <!-- Navigation Links -->
             <ul>
                 <li><a href="COE_homepage.html">Home</a></li>
-                <li class="dropdown"><a href="#">Instruction</a>
+                <li class="dropdown"><a href="COE_instruction.html">Instruction</a>
                     <ul class="dropdown-content">
                         <li><a href="COE_curricular.html">Curricular Offerings</a></li>
                         <li><a href="COE_faculty.html">Faculty</a></li>
@@ -77,7 +77,7 @@
         <!-- Sidebar Navigation Links (copied from the main nav) -->
         <ul class="sidebar-links">
             <li><a href="COE_homepage.html">Home</a></li>
-            <li class="dropdown"><a href="#">Instruction</a>
+            <li class="dropdown"><a href="COE_instruction.html">Instruction</a>
                 <ul class="dropdown-content">
                     <li><a href="COE_curricular.html">Curricular Offerings</a></li>
                     <li><a href="COE_faculty.html">Faculty</a></li>
@@ -111,11 +111,11 @@
     <!--Main Body-->
     <main>
         <section class="researchpage">
-            <!-- Pitch Tag -->
+            <!-- Header_IMG -->
             <section class="header_img">
                 <img id="pitchtag_web" src="images/coe_blg@2x.png" alt="Banner">
             </section>
-            <!-- Vision Mission Quality Policy -->
+            <!-- Research and Development -->
             <section class="res_link">
                 <h1>Research and Development</h1>
                 <ul>
@@ -153,7 +153,7 @@
             </section>
         </section>
 
-        <!-- Faculty and Featured Faculty -->
+        <!-- Research Documents -->
         <section class="research_main">
             <div class="research_left_link">
                 <h1>Publications</h1>
