--- a/Final Project/COE_extension.html
+++ b/Final Project/COE_extension.html
@@ -110,116 +110,59 @@
 
     <!--Main Body-->
     <main>
-        <section class="homepage">
-            <!--Pitch Tag-->
-            <section class="pitchtag">
-                <img id="pitchtag_web" src="images/Banner.png" alt="Banner">
+        <section class="researchpage">
+            <!-- Header Image -->
+            <section class="header_img">
+                <h1>Research and Extension Framework</h1>
+                <img id="pitchtag_web" src="images/COE-R-and-E-Framework-v2.png" alt="Banner">
             </section>
+        
+        </section>
 
-            <!-- Vision Mission Quality Policy -->
-            <section class="vision">
-                <div class="socotec">
-                    <img id="socotec" src="images/socotec.png" alt="SOCOTECH seal">
-                </div>
-                <div class="vismiss">
-                        <h1>Vision</h1>
-                        <p>
-                            PRMSU as a premier learner center and proactive university in a digital and global society.
-                        </p>
-                        <h1>Mission</h1>
-                        <p>
-                            The President Ramon Magsaysay State University shall primarily provide advance and 
-                            higher professional, technical, special instructions in various disciplines; 
-                            undertake research, extension, and income generation programs for sustainable 
-                            development of Zambales, the region, and the country. 
-                        </p>
-                    </div>
-                <div class="quality">
-                    <h1>Quality</h1>
-                        <p>
-                            The President Ramon Magsaysay State University is committed to continually strive 
-                            for excellence in instruction, research, extension and production to strengthen 
-                            global competitiveness adhering to quality standards for the utmost satisfaction of 
-                            its valued customers.
-                        </p>
-                </div>
-            </section>
-
-        <!-- Carousel Images -->
-            <section class="carousel">
-                <div class="slider">
-                    <div class="list">
-                        <div class="item">
-                            <img src="images/slide1.png" alt="Slide 1">
-                        </div>
-                        <div class="item">
-                            <img src="images/slide2.png" alt="Slide 2">
-                        </div>
-                        <div class="item">
-                            <img src="images/slide3.png" alt="Slide 3">
-                        </div>
-                        <div class="item">
-                            <img src="images/slide4.png" alt="Slide 4">
-                        </div>
-                        <div class="item">
-                            <img src="images/slide5.png" alt="Slide 5">
-                        </div>
-                        <div class="item">
-                            <img src="images/slide6.png" alt="Slide 6">
-                        </div>
-                        <div class="item">
-                            <img src="images/slide7.png" alt="Slide 7">
-                        </div>
-                        <div class="item">
-                            <img src="images/slide8.png" alt="Slide 8">
-                        </div>
-                    </div>
-                    <div class="buttons">
-                        <button id="prev"><</button>
-                        <button id="next">></button>
-                    </div>
-                    <ul class="dots">
-                        <li class="active"></li>
-                        <li></li>
-                        <li></li>
-                        <li></li>
-                        <li></li>
-                        <li></li>
-                        <li></li>
-                        <li></li>
-                        <li></li>
-                    </ul>
-                </div>
-            </section>
-
-        <!-- Faculty and Featured Faculty -->
-            <section class="faculty">
-                <div class="faculty_link">
-                    <h1>Faculty</h1>
-                    <p>
-                        The CoE faculty features a diverse team of accomplished experts, bringing deep experience across engineering and scientific fields.
-                    </p>
+        <!-- Extension Main -->
+        <section class="extension_main">
+            <div class="extension_links">
+                <h1>Documents</h1>
+                <ul>
                     <li>
-                        <a href="COE_faculty.html">
-                        Faculty & Teaching Staff
-                        <img src="images/Ext Link Icon.svg" alt="External Link Icon" class="svg-icon">
+                        <a href="https://drive.google.com/file/d/16CPLtMXmI2d1_HSHG92mcZoYs2r_IVi4/view?usp=sharing">
+                            Accomplishment 2024
+                            <img src="images/Ext Link Icon.svg" alt="External Link Icon" class="svg-icon">
                         </a>
                     </li>
-
-                </div>
-                <div class="featured_faculty">
-                    <div class="featured_pic">
-                        <img id="featured_pic" src="images/Featured Image.png" alt="Featured Faculty">
-                    </div>
-                    <div class="featured_info">
-                        <h3>Engr. Dennize Jianna R. Basilio</h3>
-                        <h2>Head of Software Engineering Elective</h2>
-                        <p>
-                            "A brilliant and dedicated leader. Her ability to simplify complex concepts and inspire innovation makes her highly respected by students and colleagues alike."
-                        </p>
-                    </div>
-                </div>
-            </section>
+                    <li>
+                        <a href="https://drive.google.com/file/d/16CPLtMXmI2d1_HSHG92mcZoYs2r_IVi4/view?usp=sharing">
+                            Accomplishment 2023
+                            <img src="images/Ext Link Icon.svg" alt="External Link Icon" class="svg-icon">
+                        </a>
+                    </li>
+                    <li>
+                        <a href="https://drive.google.com/file/d/16CPLtMXmI2d1_HSHG92mcZoYs2r_IVi4/view?usp=sharing">
+                            Accomplishment 2022
+                            <img src="images/Ext Link Icon.svg" alt="External Link Icon" class="svg-icon">
+                        </a>
+                    </li>
+                    <li>
+                        <a href="https://drive.google.com/file/d/16CPLtMXmI2d1_HSHG92mcZoYs2r_IVi4/view?usp=sharing">
+                            Accomplishment 2021
+                            <img src="images/Ext Link Icon.svg" alt="External Link Icon" class="svg-icon">
+                        </a>
+                    </li>
+                    <li>
+                        <a href="https://drive.google.com/file/d/16CPLtMXmI2d1_HSHG92mcZoYs2r_IVi4/view?usp=sharing">
+                            Accomplishment 2020
+                            <img src="images/Ext Link Icon.svg" alt="External Link Icon" class="svg-icon">
+                        </a>
+                    </li>
+                    <li>
+                        <a href="https://drive.google.com/file/d/16CPLtMXmI2d1_HSHG92mcZoYs2r_IVi4/view?usp=sharing">
+                            Programs, Projects and Activities
+                            <img src="images/Ext Link Icon.svg" alt="External Link Icon" class="svg-icon">
+                        </a>
+                    </li>
+                </ul>
+            </div>
+        </section>
         <!-- News and Information -->
             <section class="news">
                 <div class="news_header">
@@ -338,7 +281,6 @@
         </div>
     </footer>
     <!-- Script -->
-    <script src="COE_homepage.js"></script>
 </body>
 </html>
 
