--- a/Final Project/COE_res_ME.html
+++ b/Final Project/COE_res_ME.html
@@ -30,7 +30,7 @@
             <!-- Navigation Links -->
             <ul>
                 <li><a href="COE_homepage.html">Home</a></li>
-                <li class="dropdown"><a href="#">Instruction</a>
+                <li class="dropdown"><a href="COE_instruction.html">Instruction</a>
                     <ul class="dropdown-content">
                         <li><a href="COE_curricular.html">Curricular Offerings</a></li>
                         <li><a href="COE_faculty.html">Faculty</a></li>
@@ -77,7 +77,7 @@
         <!-- Sidebar Navigation Links (copied from the main nav) -->
         <ul class="sidebar-links">
             <li><a href="COE_homepage.html">Home</a></li>
-            <li class="dropdown"><a href="#">Instruction</a>
+            <li class="dropdown"><a href="COE_instruction.html">Instruction</a>
                 <ul class="dropdown-content">
                     <li><a href="COE_curricular.html">Curricular Offerings</a></li>
                     <li><a href="COE_faculty.html">Faculty</a></li>
