Added faculty dean and chairperson webpage, added faculty png files

--- a/Final Project/COE_faculty.html
+++ b/Final Project/COE_faculty.html
@@ -110,113 +110,47 @@
 
     <!--Main Body-->
     <main>
-        <section class="researchpage">
-            <!-- Header_IMG -->
-            <section class="header_img">
-                <img id="pitchtag_web" src="images/coe_blg@2x.png" alt="Banner">
-            </section>
-        </section>
+        <section class="faculty_site">
+            <section class="faculty_side">
+                    <div class="side_nav_faculty">
+                        <h1>Faculty</h1>
 
-       
-        <!-- News and Information -->
-            <section class="news">
-                <div class="news_header">
-                    <h1>The PRMSU College of Engineering through the years...</h1>
-                </div>
+                        <ul class="sidebar-links">
+                            <li><a href="COE_faculty.html"> | College Dean</a></li>
+                            <li><a href="COE_faculty_chair.html"> | Program Chair Persons</a></li>                            
+                            <button type="button" class="collapsible"> | Faculty Members</button>
+                                <div class="content">
+                                    <li><a href="COE_faculty_CE.html"> | Civil Engineering Department</a></li>
+                                    <li><a href="COE_faculty_CpE.html"> | Computer Engineering Department</a></li>
+                                    <li><a href="COE_faculty_ME.html"> | Mechanical Engineering Department</a></li>
+                                    <li><a href="COE_faculty_EE.html"> | Electrical Engineering Department</a></li>
+                                    <li><a href="COE_faculty_EM.html"> | Mining Engineering Department</a></li>
+                                    <li><a href="COE_faculty_AL.html"> | Allied and General Education Department</a></li>
+                                </div>
+                            </li>
+                        </ul>
+                    </div>
+
+                    <div class="container">
+                        <img id="pitchtag_web" src="images/Dean Image.png" alt="Banner">
+                        <h5>
+                            &emsp; Engr Gilbert D. Deboma is a faculty of the College of Engineering 
+                            for 24 years with an Academic Rank of Associate Professor V. He is a 
+                            graduate of Bachelor of Science in Electrical Engineering at Technological 
+                            Institute of the Philippines – Quezon City. He finished his Master 
+                            of Science in Electronics Engineering at Andong National University – 
+                            South Korea. He is currently taking up PhD in Agricultural Engineering 
+                            at Central Luzon State University. Engr Deboma is an active member of the 
+                            Institute of Integrated Electrical Engineers, Inc., the accredited 
+                            professional organization of electrical practitioners of the Philippines.  
+                            He is the current dean of the College of Engineering and concurrent Program 
+                            Chairperson of the Electrical Engineering Department.
+                        </h5>
+                    </div>
             </section>
-        <!-- Department History -->
-        <section class="history_main_1">
-            <h1>Bachelor of Science in Civil Engineering</h1>
-            <div class="hist_body">
-                <img class="res_img" src="images/CE_Hist.png" alt="Civil Engineer">
-                <h3>
-                    &emsp; The Bachelor of Science in Civil Engineering Program was first proposed to be offered in 
-                    Botolan Campus under the Self-Liquidating Program Scheme in early 2002 under the leadership 
-                    of President Feliciano S. Rosete. The RMTU Board of Regents approved the proposal in early 2003 
-                    but Iba Campus was chosen as its venue on the issues of facilities and faculty to handle the
-                    program in Botolan Campus. The BSCE program started in the first semester of the school year 
-                    2003-2004 under the Institute of Evening Opportunity Programs with Prof. Cecilia A. Santiago 
-                    as the Dean and close coordination with Engr. Liza M. Atienza, the Dean of the College of 
-                    Engineering and Architecture.
-                    <br><br>
-                    &emsp; BSCE had its first batch graduate in March 2008 with a seventy percent passing rate in 
-                    the board examination. In 2010, the Board of Regents and the DBM approved its transfer to 
-                    CEA as one of the RMTU regular programs. The BSCE received its Certificate of Program Compliance
-                    and level I AACCUP accreditation in 2016 and level II in 2019.
-                </h3>
-            </div>
-        </section>
-        <section class="history_main_2">
-            <h1>Bachelor of Science in Computer Engineering</h1>
-            <div class="hist_body">
-                <img class="res_img" src="images/CpE_Hist.png" alt="Computer Engineer">
-                <h3>
-                    &emsp; The Bachelor of Science in Computer Engineering in President Ramon 
-                    Magsaysay State University began in the 2nd Semester of the Academic Year 
-                    2001-2002 when the then Ramon Magsaysay Technological University (RMTU) Board 
-                    of Regents (BOR) approved the offering of self-liquidating degree programs in 
-                    evening classes. The degree program was officially opened in the Academic Year
-                    2002-2003 under the Institute of Evening Opportunity Program (IEOP) headed by 
-                    Engr. Juvelyn M. Bueno as the first Program Chair. The first batch graduated in 
-                    2007.
-                    <br><br>
-                    &emsp; In 2009, Engr. Melojean C. Marave was designated as the Program Chair. 
-                    In 2012, Engr. Ricky S. Barrera assumed the Chairmanship of the program until 
-                    2017 which was then designated to Engr. Dionisio M. Martin, Jr. up to the present.
-                    <br><br>
-                    &emsp; Due to the increasing population of students, the program was offered in Morning and 
-                    Evening Sessions in AY 2004-2005 under the College of Communications and Information Technology 
-                    (CCIT) and IEOP. The last batch of BSCpE in the IEOP graduated in 2012. From then on, 
-                    the program was offered only in the CCIT. In 2018, in compliance with the recommendation of 
-                    the Commission on Higher Education (CHED), the program was transferred under the College of 
-                    Engineering (COE).
-                </h3>
-            </div>
-        </section>
-        <section class="history_main_1">
-            <h1>Bachelor of Science in Mechanical Engineering</h1>
-            <div class="hist_body">
-                <img class="res_img" src="images/ME_Hist.png" alt="Mechanical Engineer">
-                <h3>
-                    &emsp; The Bachelor of Science in Mechanical Engineering in President Ramon 
-                    Magsaysay State University began when the RMPC Board of Regents approved the 
-                    curricular leading to the degrees of Bachelor of Science and Master of 
-                    Science in Mechanical Engineering. The degree program was officially opened 
-                    and the department was first headed by Engr. Noel M. Dioyan. The department 
-                    graduated its first batch of students in 2001, as one of oldest programs in the 
-                    College.
-                </h3>
-            </div>
-        </section>
-        <section class="history_main_2">
-            <h1>Bachelor of Science in Electrical Engineering</h1>
-            <div class="hist_body">
-                <img class="res_img" src="images/EE_Hist.png" alt="Electrical Engineer">
-                <h3>
-                    &emsp; The Bachelor of Science in Electrical Engineering in President Ramon 
-                    Magsaysay State University began when the RMPC Board of Regents approved the 
-                    curricular leading to the degrees of Bachelor of Science and Master of 
-                    Science in Mechanical Engineering. The degree program was officially opened 
-                    and the department was first headed by Engr. Noel M. Dioyan. The department 
-                    graduated its first batch of students in 2001, as one of oldest programs in the 
-                    College.
-                </h3>
-            </div>
-        </section>
-        <section class="history_main_1">
-            <h1>Bachelor of Science in Mining Engineering</h1>
-            <div class="hist_body">
-                <img class="res_img" src="images/EM_Hist.png" alt="Mining Engineer">
-                <h3>
-                    &emsp; Content to be updated soon...
-                </h3>
-            </div>
-        </section>
-        <section class="footer_img">
-            <img id="pitchtag_web" src="images/Faculty Image.png" alt="Faculty COE">
         </section>
     </main>
-    
+
     <!-- Footer -->
     <footer>
         <div class="footer_name">
@@ -284,7 +218,7 @@
         </div>
     </footer>
     <!-- Script -->
-    <script src="COE.js"></script>
+    <script src="COE_curricular.js"></script>
 </body>
 </html>
 
