Added the faculty staff pages on all departments, adjusted general styling

--- a/Final Project/COE_faculty_EM.html
+++ b/Final Project/COE_faculty_EM.html
@@ -110,29 +110,64 @@
 
     <!--Main Body-->
     <main>
-        <section class="researchpage">
-            <!-- Instruction -->
-             <section class="res_link">
-                <h1>Instruction</h1>
-             </section>
-            <section class="res_link">
-                <ul>
-                    <li>
-                        <a href="COE_curricular.html" class="linkcard2">
-                            <img class="res_img" src="images/Diploma.png" alt="Curricular Offers">
-                            <span>Curricular Offerings</span>
-                        </a>
-                    </li>
-                    <li>
-                        <a href="COE_faculty.html" class="linkcard2">
-                            <img class="res_img" src="images/Faculty.png" alt="Faculty Staff">
-                            <span>Faculty</span>
-                        </a>
-                    </li>
-                </ul>
+        <section class="faculty_site">
+            <section class="faculty_side">
+                    <div class="side_nav_faculty">
+                        <h1>Faculty</h1>
+
+                        <ul class="sidebar-links">
+                            <li><a href="COE_faculty.html"> | College Dean</a></li>
+                            <li><a href="COE_faculty_chair.html"> | Program Chair Persons</a></li>                            
+                            <button type="button" class="collapsible"> | Faculty Members</button>
+                                <div class="content">
+                                    <li><a href="COE_faculty_CE.html"> | Civil Engineering Department</a></li>
+                                    <li><a href="COE_faculty_CpE.html"> | Computer Engineering Department</a></li>
+                                    <li><a href="COE_faculty_ME.html"> | Mechanical Engineering Department</a></li>
+                                    <li><a href="COE_faculty_EE.html"> | Electrical Engineering Department</a></li>
+                                    <li><a href="COE_faculty_EM.html"> | Mining Engineering Department</a></li>
+                                    <li><a href="COE_faculty_AL.html"> | Allied and General Education Department</a></li>
+                                </div>
+                            </li>
+                        </ul>
+                    </div>
+
+                    <div class="container_chair">
+                         <div class="faculty_grid">
+                            <div class="faculty_card">
+                                <img class="res_img" src="images/EM/null.png" alt="Faculty_Image">
+                                <span>Content to be published soon...</span>
+                            </div>
+                            <div class="faculty_card">
+                                <img class="res_img" src="images/EM/null.png" alt="Faculty_Image">
+                                <span>Content to be published soon...</span>
+                            </div>
+                            <div class="faculty_card">
+                                <img class="res_img" src="images/EM/null.png" alt="Faculty_Image">
+                                <span>Content to be published soon...</span>
+                            </div>
+                            <div class="faculty_card">
+                                <img class="res_img" src="images/EM/null.png" alt="Faculty_Image">
+                                <span>Content to be published soon...</span>
+                            </div>
+                            <div class="faculty_card">
+                                <img class="res_img" src="images/EM/null.png" alt="Faculty_Image">
+                                <span>Content to be published soon...</span>
+                            </div>
+                            <div class="faculty_card">
+                                <img class="res_img" src="images/EM/null.png" alt="Faculty_Image">
+                                <span>Content to be published soon...</span>
+                            </div>
+                            <div class="faculty_card">
+                                <img class="res_img" src="images/EM/null.png" alt="Faculty_Image">
+                                <span>Content to be published soon...</span>
+                            </div>
+                         </div>
+
+                    </div>
             </section>
-        </section>  
-    
+        </section>
+    </main>
+
     <!-- Footer -->
     <footer>
         <div class="footer_name">
@@ -200,7 +235,8 @@
         </div>
     </footer>
     <!-- Script -->
-    <script src="COE.js"></script>
+    <script src="COE_curricular.js"></script>
+    
 </body>
 </html>
 
