--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
             <!-- Search Bar -->
             <form action="https://www.google.com/search" method="GET" class="search-form">
                 <input type="text" name="q" placeholder="Search the site..." aria-label="Search">
-                <input type="hidden" name="sitesearch" value="yoursite.com"> <!-- Replace with your domain -->
+                <input type="hidden" name="sitesearch" value="https://getting-into-coding.github.io/ELEC-3-Activities/"> <!-- Replace with your domain -->
                 <button type="submit">Search</button>
             </form>
 
